--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 
     <div class="hero-buttons">
   <button class="btn-outline open-modal">Free Fit Consult →</button>
-  <a href="programs.html" class="btn-outline secondary-btn">View Programs →</a>
+  <a href="./pages/programs.html" class="btn-outline secondary-btn">View Programs →</a>
 </div>
 
 
@@ -688,7 +688,7 @@
   </div>
 
   <!-- Footer -->
-  <footer>©2024 BH Performance. All rights reserved. &nbsp; <a href="#">Privacy Policy</a></footer>
+  <footer>©2026 BH Performance. All rights reserved. &nbsp; <a href="#">Privacy Policy</a></footer>
 
 </div><!-- end scroll-wrap -->
 
