--- a/test1.html
+++ b/test1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>BH Performance – Blaise Hala</title>
+<title>BH Performance – GLP-1 Certified Strength Coach</title>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=Raleway:wght@300;400;500&display=swap" rel="stylesheet"/>
 <style>
   *, *::before, *::after { margin:0; padding:0; box-sizing:border-box; }
@@ -85,7 +85,7 @@
     font-weight:300; line-height:1.05; letter-spacing:3px;
     text-transform:uppercase;
     text-shadow:0 2px 24px rgba(0,0,0,0.25);
-    margin-bottom:44px;
+    margin-bottom:150px;
   }
 
   .btn-outline {
@@ -99,6 +99,7 @@
     background:transparent;
     transition:background 0.3s;
     cursor:pointer;
+    text-decoration:none;
   }
 
   .btn-outline:hover { background:rgba(255,255,255,0.12); }
@@ -119,11 +120,92 @@
     50%     { transform:translateX(-50%) translateY(8px); }
   }
 
-  /* ─── MEET CARD (creeps up over hero) ─── */
-  .meet-card-wrap {
-    margin-top:-180px;
+  .hero-buttons {
+    display:flex;
+    gap:20px;
+    flex-wrap:wrap;
+    justify-content:center;
+  }
+
+  .secondary-btn {
+    border-color: rgba(255,255,255,0.6);
+    opacity:0.85;
+  }
+
+  .secondary-btn:hover {
+    background:rgba(255,255,255,0.2);
+  }
+
+  /* ─── GLP-1 CALLOUT (high visibility section) ─── */
+  .glp1-callout {
+    background:linear-gradient(135deg, #2a3828 0%, #3d5a3e 100%);
+    color:#fff;
+    padding:60px 24px;
+    text-align:center;
     position:relative;
     z-index:2;
+    border-bottom:3px solid var(--green-dark);
+  }
+
+  .glp1-callout .badge {
+    display:inline-block;
+    background:rgba(255,255,255,0.15);
+    border:1px solid rgba(255,255,255,0.3);
+    color:#fff;
+    font-size:10px;
+    font-weight:500;
+    letter-spacing:3px;
+    text-transform:uppercase;
+    padding:6px 18px;
+    border-radius:50px;
+    margin-bottom:20px;
+  }
+
+  .glp1-callout h2 {
+    font-family:'Cormorant Garamond',serif;
+    font-size:clamp(32px,5vw,52px);
+    font-weight:300;
+    text-transform:uppercase;
+    letter-spacing:2px;
+    margin-bottom:18px;
+    line-height:1.2;
+  }
+
+  .glp1-callout p {
+    font-size:15px;
+    line-height:1.8;
+    color:rgba(255,255,255,0.85);
+    max-width:680px;
+    margin:0 auto 32px;
+  }
+
+  .btn-filled-white {
+    display:inline-block;
+    background:#fff;
+    color:var(--green-dark);
+    font-family:'Raleway',sans-serif;
+    font-size:13px;
+    font-weight:600;
+    letter-spacing:2px;
+    text-transform:uppercase;
+    padding:18px 44px;
+    border:none;
+    cursor:pointer;
+    transition:transform 0.2s, box-shadow 0.2s;
+    text-decoration:none;
+  }
+
+  .btn-filled-white:hover {
+    transform:translateY(-2px);
+    box-shadow:0 6px 20px rgba(0,0,0,0.2);
+  }
+
+  /* ─── MEET CARD (creeps up over hero) ─── */
+  .meet-card-wrap {
+    margin-top: -340px;
+    margin-bottom:80px;
+    position:relative;
+    z-index:10;
     max-width:860px;
     margin-left:auto;
     margin-right:auto;
@@ -134,7 +216,6 @@
     background:#fff;
     padding:72px 48px 64px;
     text-align:center;
-    box-shadow:0 -4px 40px rgba(0,0,0,0.08);
   }
 
   .meet-photo {
@@ -149,7 +230,7 @@
 
   .meet-title {
     font-family:'Cormorant Garamond',serif;
-    font-size:36px; font-weight:300;
+    font-size:30px; font-weight:300;
     letter-spacing:4px; text-transform:uppercase;
     margin-bottom:8px; color:var(--charcoal);
   }
@@ -169,10 +250,23 @@
     max-width:580px; margin:0 auto 32px;
   }
 
-  /* ─── CREAM BODY ─── */
-  .cream-body { background:var(--cream); position:relative; z-index:2; }
+  .meet-card::after {
+    content:"";
+    display:block;
+    width:120px;
+    height:1px;
+    background:#e2e2e2;
+    margin:40px auto 0;
+  }
 
-  .divider { width:60px; height:1px; background:var(--border); margin:48px auto; }
+  /* ─── CREAM BODY ─── */
+  .cream-body { 
+    background:#ffffff; 
+    position:relative;
+    z-index:2;
+  }
+
+  .divider { width:100px; height:1px; background:var(--border); margin:48px auto; }
 
   /* ─── METHOD ─── */
   .method {
@@ -180,6 +274,7 @@
     max-width:1000px; margin:0 auto;
     display:grid; grid-template-columns:1fr 1fr;
     gap:64px; align-items:center;
+    margin-top: -40px;
   }
 
   .method-img {
@@ -196,7 +291,7 @@
 
   .method-text h2 {
     font-family:'Cormorant Garamond',serif;
-    font-size:42px; font-weight:300; line-height:1.15;
+    font-size:46px; font-weight:300; line-height:1.15;
     text-transform:uppercase; letter-spacing:2px;
     margin-bottom:28px; color:var(--charcoal);
   }
@@ -358,6 +453,7 @@
     padding:20px 52px;
     border:none; cursor:pointer;
     transition:background 0.3s;
+    text-decoration:none;
   }
 
   .btn-filled:hover { background:var(--green-mid); }
@@ -469,11 +565,22 @@
 
   /* ─── RESPONSIVE ─── */
   @media (max-width:720px) {
-    .meet-card-wrap { margin-top:-120px; }
+    .meet-card-wrap { margin-top:-200px; }
     .meet-card      { padding:60px 28px 48px; }
     .method         { grid-template-columns:1fr; gap:36px; }
     .cards          { grid-template-columns:1fr; max-width:400px; margin:0 auto; }
   }
+
+  @media (max-width: 768px) {
+    .hero-headline { margin-bottom: 40px; }
+    .btn-outline { padding: 16px 28px; font-size: 12px; }
+  }
+
+  @media (max-width: 600px) {
+    .hero-buttons { flex-direction:column; }
+    .hero-buttons a, .hero-buttons button { width:100%; text-align:center; }
+  }
+
 </style>
 </head>
 <body>
@@ -491,44 +598,59 @@
       <div class="logo-name">BH Performance</div>
     </div>
     <h1 class="hero-headline">Unlock the best<br>version of you</h1>
-    <button class="btn-outline open-modal">Free Fit Consult &nbsp;→</button>
+
+    <div class="hero-buttons">
+      <a href="pages/glp1.html" class="btn-outline">GLP-1 Training →</a>
+      <a href="pages/programs.html" class="btn-outline secondary-btn">View Programs →</a>
+    </div>
+
     <div class="scroll-hint">
       <span>Scroll</span>
       <svg viewBox="0 0 24 24"><polyline points="6 9 12 15 18 9"/></svg>
     </div>
   </section>
 
-  <!-- ── MEET CARD  (negative margin creeps up over hero) ── -->
-  <div class="meet-card-wrap">
-    <div class="meet-card">
-      <img src="./images/pexels-rdne-8401124.jpg" alt="Blaise Hala" class="meet-photo"/>
-      <h2 class="meet-title">Meet Blaise Hala</h2>
-      <p class="meet-cred">Certified Personal Trainer + Nutritionist</p>
-      <p class="meet-quote">Fitness is more than just hitting the gym. It&rsquo;s about being the happiest, healthiest version of yourself. I just make it easier to get there.</p>
-      <button class="btn-filled open-modal">Free Fit Consult &nbsp;→</button>
-    </div>
-  </div>
+  <!-- ── GLP-1 CALLOUT (high visibility) ── -->
+  <section class="glp1-callout">
+    <div class="badge">GLP-1 Certified Specialist</div>
+    <h2>On Ozempic or Wegovy?<br>Don't Lose Your Muscle</h2>
+    <p>GLP-1 medications help you lose weight fast—but without proper strength training, you'll lose muscle too. I'm a certified GLP-1 strength specialist helping clients keep their strength while the weight comes off.</p>
+    <a href="pages/glp1.html" class="btn-filled-white">Learn About GLP-1 Training →</a>
+  </section>
 
   <!-- ── CREAM BODY ── -->
   <div class="cream-body">
     <div class="divider" style="margin-top:64px;"></div>
 
+    <!-- ── MEET CARD ── -->
+    <div class="meet-card-wrap">
+      <div class="meet-card">
+        <img src="./images/pexels-rdne-8401124.jpg" alt="Blaise Hala" class="meet-photo"/>
+        <h2 class="meet-title">Meet Blaise Hala</h2>
+        <p class="meet-cred">GLP-1 Certified Strength Coach | Nutritionist</p>
+        <p class="meet-quote">Fitness is more than just hitting the gym. It&rsquo;s about being the happiest, healthiest version of yourself. I just make it easier to get there.</p>
+        <button class="btn-filled open-modal">Free Fit Consult &nbsp;→</button>
+      </div>
+    </div>
+
     <!-- Method -->
     <section class="method">
-      <img src="https://images.unsplash.com/photo-1552515392-4d8b62341e29?w=600&q=80" alt="Training" class="method-img"/>
+      <img src="./images/pexels-rdne-8401124.jpg" alt="Training" class="method-img"/>
       <div class="method-text">
         <div class="label">My Method</div>
         <h2>A big-picture approach<br>to your well-being</h2>
         <p>Instead of putting you on a treadmill, I look at what your end game is — where you want to be. And from there I&rsquo;ll build you a custom program, complete with nutritional guidelines, that helps you get there.</p>
         <p>Sometimes that means grueling hours in the gym. Sometimes it&rsquo;s a stretching routine to improve mobility. Sometimes it&rsquo;s both.</p>
+        <p>I've helped people with poor nutrition improve their eating habits and take their health back. I've transformed people with little physical fitness into bona fide athletes. And I've helped experienced athletes overcome plateaus to reach new heights of performance.</p>
+        <p>Everyone is different. What works well for one person may not for another. And that's why I take a thoughtful, tailored approach to every new client.</p>
       </div>
     </section>
 
     <!-- Testimonial CTA -->
     <section class="testimonial-cta">
       <div class="divider"></div>
-      <button class="btn-filled open-modal">Free Fit Consult &nbsp;→</button>
-      <span class="no-obligation">Free—no obligation</span>
+      <a href="pages/testimonials.html" class="btn-filled">See Real Transformations &nbsp;→</a>
+      <span class="no-obligation">Before & after results from real clients</span>
     </section>
   </div>
 
@@ -549,122 +671,3 @@
     <div class="services-inner">
       <div class="label">What I Offer</div>
       <h2>Tailored Programs</h2>
-      <div class="cards">
-        <div class="card">
-          <div class="card-icon"><svg viewBox="0 0 24 24"><path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/></svg></div>
-          <h3>Custom Training</h3>
-          <p>Personalized workout plans designed around your fitness level, goals, and available time.</p>
-        </div>
-        <div class="card">
-          <div class="card-icon"><svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="9"/><path d="M12 6v6l4 2"/></svg></div>
-          <h3>Nutrition Guidance</h3>
-          <p>Evidence-based meal strategies that fuel performance without sacrificing the foods you love.</p>
-        </div>
-        <div class="card">
-          <div class="card-icon"><svg viewBox="0 0 24 24"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg></div>
-          <h3>Mindset Coaching</h3>
-          <p>Build the mental resilience and accountability frameworks that turn short-term efforts into lasting habits.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ── PARALLAX BANNER ── -->
-  <section class="parallax-banner">
-    <div class="parallax-banner-inner">
-      <h2>Ready to get started?</h2>
-      <p>Let&rsquo;s talk about your goals</p>
-      <button class="btn-outline open-modal">Free Fit Consult &nbsp;→</button>
-    </div>
-  </section>
-
-  <!-- ── FINAL CTA ── -->
-  <div class="cta-wrap">
-    <section class="cta-section">
-      <div class="label">Ready to get started?</div>
-      <h2>Let&rsquo;s talk about<br>your goals</h2>
-      <p>Hiring a coach can be a big commitment, but your health and well-being is worth it. Schedule a free FIT consultation with me to explore your goals and the best way to achieve them together.</p>
-      <button class="btn-filled open-modal">Free Fit Consult &nbsp;→</button>
-    </section>
-  </div>
-
-  <!-- Footer -->
-  <footer>©2024 BH Performance. All rights reserved. &nbsp; <a href="#">Privacy Policy</a></footer>
-
-</div><!-- end scroll-wrap -->
-
-<!-- ══ MODAL ══ -->
-<div class="modal-backdrop" id="modalBackdrop">
-  <div class="modal">
-    <div class="modal-header">
-      <button class="modal-close" id="modalClose">&times;</button>
-      <div class="modal-label">Let&rsquo;s get fit.</div>
-      <h2>Book your free<br>fit consult</h2>
-    </div>
-    <div class="modal-body">
-      <p>Shoot me your name &amp; email, and we&rsquo;ll connect to schedule your consultation.</p>
-      <input type="email" class="modal-input" id="emailInput" placeholder="Email" autocomplete="off"/>
-      <div class="input-error-msg" id="emailError">
-        <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>
-        Please enter your Email
-      </div>
-      <input type="text" class="modal-input" id="nameInput" placeholder="First Name" autocomplete="off"/>
-      <button class="modal-submit" id="submitBtn">Let&rsquo;s Connect &nbsp;→</button>
-      <div class="modal-privacy">Privacy Policy: We hate spam and promise to keep your email address safe</div>
-    </div>
-  </div>
-</div>
-
-<!-- ══ JS ══ -->
-<script>
-const backdrop   = document.getElementById('modalBackdrop');
-const closeBtn   = document.getElementById('modalClose');
-const emailInput = document.getElementById('emailInput');
-const nameInput  = document.getElementById('nameInput');
-const emailError = document.getElementById('emailError');
-const submitBtn  = document.getElementById('submitBtn');
-
-function openModal(){
-  backdrop.classList.add('open');
-  document.body.style.overflow='hidden';
-  setTimeout(()=>emailInput.focus(),300);
-}
-
-function closeModal(){
-  backdrop.classList.remove('open');
-  document.body.style.overflow='';
-  emailInput.value='';
-  nameInput.value='';
-  emailInput.classList.remove('input-error');
-  emailError.classList.remove('visible');
-}
-
-document.querySelectorAll('.open-modal').forEach(el=>el.addEventListener('click',openModal));
-closeBtn.addEventListener('click',closeModal);
-backdrop.addEventListener('click',e=>{ if(e.target===backdrop) closeModal(); });
-document.addEventListener('keydown',e=>{ if(e.key==='Escape'&&backdrop.classList.contains('open')) closeModal(); });
-
-function isValidEmail(v){ return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(v); }
-
-emailInput.addEventListener('input',()=>{
-  if(isValidEmail(emailInput.value)){
-    emailInput.classList.remove('input-error');
-    emailError.classList.remove('visible');
-  }
-});
-
-submitBtn.addEventListener('click',()=>{
-  if(!isValidEmail(emailInput.value.trim())){
-    emailInput.classList.add('input-error');
-    emailError.classList.add('visible');
-    emailInput.focus();
-    return;
-  }
-  document.querySelector('.modal-body').innerHTML=
-    '<p style="margin-top:24px;font-size:18px;font-weight:500;color:#2c2c2c;font-family:\'Cormorant Garamond\',serif;">Thanks! We\'ll be in touch soon.</p>'+
-    '<p style="margin-top:8px;">Keep an eye on your inbox — we\'ll send you the next steps within 24 hours.</p>'+
-    '<button class="modal-submit" style="max-width:260px;margin:20px auto 0;" onclick="closeModal()">Close</button>';
-});
-</script>
-</body>
-</html>
